dev: user details by wallet
